docs(specs): expand SB4 migration scope to JDK 25 + Keycloak 26.6.1
Includes the Java release-target bump (21→25, enabled by Boot 4's new
Gradle plugin ASM) and a Keycloak docker image bump (26.0.7→26.6.1).
Adds a leading commit for the Keycloak bump and a trailing one for
MEMORY.md/CLAUDE.md updates; renumbers the commit sequence (now 7).

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>